syntax = "proto3";

option csharp_namespace = "Contracts.TestGenerator.GRPC.TestGenerator";

package TestGenerator;


service TestGenerator {
  rpc GenerateTest (ParamForTestGenerator) returns (Test);
}


message TestModule {
    string id = 1;
    int32 min_value_for_passed = 2;
    repeated Recommendation recommendations = 3;
}


message Recommendation {
	string title = 1;
	string description = 2;
	string link = 3;
}


message Rule {
    repeated TestModule test_modules = 1;
}

message Option {
    bool is_true = 1;
    string text = 2;
}

message Question {
    string test_module_id = 1;
    string id = 2;
    string text = 3;
    string description = 4;
    string type = 5;
    int32 max_value = 6;
    repeated Option options = 7;
}

message TestInfo {
    int32 count_questions = 1;
    int32 max_value = 2;
}

message Settings {
    int32 limit_duration_in_seconds = 1;
    bool is_timer = 2;
    bool is_corrected = 3;
}

message Test {
    int32 id = 1;
    TestInfo test_info = 2;
    Settings settings = 3;
    Rule rule = 4;
    repeated Question questions = 5;
}

message ParamForTestGenerator {
  repeated string test_module_links = 1;
  bool mix_questions = 2;
  bool mix_answers = 3;
  bool is_correct = 4;
  bool is_timer = 5;
  bool is_recommend_materials = 6;
}





