syntax = "proto3";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "HRApi.Domain.GRPC.TestModuleGRPC";

package TestModule;

service TestModule {
  rpc GetTestModule (Link) returns (Module);
  rpc InsertTestModule (Module) returns (Link);
  rpc UpdateTestModule (Module) returns (ResultModification);
  rpc DeleteTestModule (Link) returns (ResultModification);
}


message ResultModification {
  bool result = 1;
}


message Link {
  string link = 1;
}


message Options {
  bool is_default = 1;
  int32 count_questions = 2;
  int32 take_questions = 3;
  int32 limit_duration_in_seconds = 4;
}

message Option {
  string id = 1;
  bool is_true = 2;
  string text = 3;
}

message Question {
  string id = 1;
  string text = 2;
  string description = 3;
  string type = 4;
  int32 max_value = 5;
  repeated Option options = 6;
}

message Rule {
  int32 min_value_for_passed = 1;
}

message Recommendation {
	string title = 1;
	string description = 2;
	string link = 3;
}

message Module {
  google.protobuf.StringValue id = 1;
  string title = 2;
  Options options = 3;
  Rule rule = 4;
  repeated Question questions = 5;
  repeated Recommendation recommendations = 6;
}
